<resources>
    <string name="app_name">App3</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="hint_ManagerName">Manager Name</string>
    <string name="hint_UserName">User Name</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_submit_expense">SubmitExpenseActivity</string>

    <string-array name="dates_array">
        <item>October 2015</item>
        <item>September 2015</item>
        <item>August 2015</item>
        <item>July 2015</item>
        <item>June 2015</item>
        <item>May 2015</item>
        <item>April 2015</item>
        <item>March 2015</item>
        <item>February 2015</item>
        <item>January 2015</item>
        <item>December 2014</item>
        <item>November 2014</item>
    </string-array>

    <string-array name="status_array">
        <item>All</item>
        <item>Pending</item>
        <item>Approved</item>
        <item>Flagged</item>
    </string-array>
</resources>
